--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>title</title>
+    <title>Working with Flickr</title>
     <link rel="stylesheet" href="style.css" type="text/css">
     <script src="libs/vue.js"></script>
     <script src="libs/flickrapi.js"></script>
