--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="app">
-      <button class="random" @click="randomize">Randomize</button>
+      <button class="random" @click="randomize">Switch</button>
       <div class="container">
         <div class="column">
           <img v-for="(item, index) in photos1" :src="'photos/' +item.id +'.jpg'" 
