--- a/public/index.html
+++ b/public/index.html
@@ -7,48 +7,17 @@
     <link rel="stylesheet" href="style.css" type="text/css">
     <script src="libs/vue.js"></script>
     <script src="libs/flickrapi.js"></script>
-    <script src="photoinfo.js"></script>
+    <script src="photos1.js"></script>
   </head>
   <body>
     <div id="app">
-      <button class="random" @click="randomize">Switch</button>
+      <button class="sort" @click="switchSort">Switch Sort</button>
+      <input type="checkbox" id="filter" v-model="filterX"></input> <label for="filter">Nur die mit x</label>
       <div class="container">
-        <div class="column">
-          <img v-for="(item, index) in photos1" :src="'photos/' +item.id +'.jpg'" 
+          <img v-for="(item, index) in photos" :src="'photos/' +item.Name" 
           :class="{out: item.isOut, in: item.isIn}"
           @click="transition">
           </img>
-       </div>
-       <div class="column">
-          <img v-for="(item, index) in photos2" :src="'photos/' +item.id +'.jpg'" 
-          :class="{out: item.isOut, in: item.isIn}"
-          @click="transition">
-          </img>
-       </div>
-       <div class="column">
-          <img v-for="(item, index) in photos3" :src="'photos/' +item.id +'.jpg'" 
-          :class="{out: item.isOut, in: item.isIn}"
-          @click="transition">
-          </img>
-       </div>
-       <div class="column">
-          <img v-for="(item, index) in photos4" :src="'photos/' +item.id +'.jpg'" 
-          :class="{out: item.isOut, in: item.isIn}"
-          @click="transition">
-          </img>
-       </div>
-       <div class="column">
-          <img v-for="(item, index) in photos5" :src="'photos/' +item.id +'.jpg'" 
-          :class="{out: item.isOut, in: item.isIn}"
-          @click="transition">
-          </img>
-       </div>
-       <div class="column">
-          <img v-for="(item, index) in photos6" :src="'photos/' +item.id +'.jpg'" 
-          :class="{out: item.isOut, in: item.isIn}"
-          @click="transition">
-          </img>
-       </div>
       </div>
     </div>
     <script src="client.js"></script>
