--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <div id="app">
+      <!-- Controls -->
       <button class="sort" @click="switchSort">Switch Sort</button>
       <input type="checkbox" id="filter" v-model="filterX"></input> <label for="filter">Nur die mit x</label>
       <select id="text"  v-model="selectedText"> 
@@ -21,6 +22,7 @@
         <option value="stadt">Stadt</option>
       </select>
       <div><input type="checkbox" id="gridinput" v-model="grid"></input> <label for="gridinput">Grid Layout</label></div>
+      <!-- Content starts here -->
       <div class="container" v-if="!grid">
           <img v-for="(item, index) in photos" :src="'photos/' +item.Name" 
             @click="transition">
